# openalea-meta

./: .coveragerc  .cruft.json  CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml  run_test.sh  test_ipynb.sh
.github/workflows/: openalea_ci.yml
conda/: environment.yml  meta.yaml
doc/: conf.py  extra.md  index.md  installation.md
doc/examples/: example1.ipynb  example2.ipynb
src/openalea/openalea-meta/: __init__.py
src/openalea/openalea-meta_wralea/: __init__.py
test/: test_openalea-meta.py
