[build-system]
requires = [
    "setuptools",
    "setuptools_scm",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = false # force explicit declaration of data (disable automatic inclusion)

# enable dynamic version based on git tags
[tool.setuptools_scm]

[project]
name = "openalea"
authors = [
  { name = "Fabrice Bauget" },
  { name = "Christophe Pradal" },
]
description = "openalea meta-package"
readme = "README.md"
license = "CECILL-C"
license-files = ["LICEN[CS]E*"]
requires-python = ">=3.10"
dynamic = ["version"]
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
]

# you can list here all dependencies that are pip-instalable, and that have a name identical to the one used by conda (to allow reuse of this list in meta.yaml)
# If conda name is different, please do not declare the pip name, and declare conda name in the next section
dependencies = [
]

[project.optional-dependencies]
test = [
  "pytest",
  "nbmake",
]
dev = [
  "pytest >=6",
  "pytest-cov >=3",
]
doc = [
  "sphinx-autobuild",
  "pydata-sphinx-theme",
  "myst-parser",
  "sphinx-favicon",
  "ipykernel",
  "sphinx-copybutton",
  "ipython_genutils",
  "nbsphinx",
]

# section specific to conda-only distributed package (not used by pip yet)
[tool.conda.environment]
channels = [
  "openalea3",
  "conda-forge"
]
dependencies = [
  "openalea.plantgl=3.22.3",
  "openalea.lpy=3.15.4",
  "openalea.core=2.5.0",
  "openalea.widgets=1.1.2",
  "openalea.mtg=2.3.0",
  "openalea.scipack=2.5.2",
  "openalea.oalab=2.5.0",
  "openalea.grapheditor=2.5.0",
  "openalea.visualea=2.5.0",
  "openalea.weberpenn=2.5.0",
  "openalea.rsml=1.5.0",
  "openalea.ratp=2.2.0",
  "openalea.caribu=8.2.1",
  "openalea.astk=3.1.0",
  "openalea.adel=2.1.1",
  "openalea.spice=1.1.1",
  "openalea.hydroroot=2.1.0",
  "openalea.phenomenal=1.10.4",
  "openalea.hydroshoot=5.3.0",
#  "openalea.wheatfspm=2.0.1.dev",
]

[project.urls]
Repository = "https://github.com/openalea/openalea-meta"
Homepage = "https://openalea.readthedocs.io/"
"Bug Tracker" = "https://github.com/openalea/openalea-meta/issues"
Discussions = "https://github.com/openalea/openalea-meta/discussions"
Changelog = "https://github.com/openalea/openalea-meta/releases"

#[project.entry-points."wralea"]
#"openalea-meta" = "openalea.openalea-meta_wralea"
